<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="title_quantity">Quantity</string>
    <string name="_0" translatable="false">0</string>
    <string name="_2" translatable="false">2</string>
    <string name="action_order">Order</string>
    <string name="title_price">Price</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="one_dollar_sign" translatable="false">$1.00</string>
    <string name="title_order_summary">Order Summary</string>
    <string name="title_toppings">Toppings</string>
    <string name="title_whipped_cream">Whipped cream</string>
    <string name="title_chocolate">Chocolate</string>
    <string name="hint_name">Name</string>
    <string name="error_name_empty">Required</string>
    <string name="error_order_invalid">⚠ Please order a valid quantity ⚠</string>

    <!--Order Summary msg-->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Edy">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="hasWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add Chocolate? <xliff:g id="hasChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="totalPrice" example="$10">%s</xliff:g></string>
    <string name="msg_thank_you">Thank you!</string>
    <string name="order_summary_email_subject"><xliff:g id="name" example="Edy">%s</xliff:g>\'\s Order</string>
</resources>